added to ensure the github repo was aligned.  backend seems untouched for a while - we will see what genspark can do

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- added to ensure the github repo was aligned -->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
