--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retirement Planning Calculator</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Emoji favicon - no file needed! -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
 </head>
 <body>
     <div class="container">
