--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,6 +94,7 @@
                         <div class="form-group">
                             <label for="monthlyContribution">Monthly Savings ($)</label>
                             <input type="number" id="monthlyContribution" min="0" step="100" value="1500" required>
+                            <span class="info-text">Allocated 70% RRSP / 30% TFSA until retirement</span>
                         </div>
                         <div class="form-group">
                             <label for="expectedReturn">Expected Return (%)</label>
