Add account breakdown visualization with multi-trace chart and summary cards

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -259,6 +259,29 @@
                     <h3>Balance Over Time</h3>
                     <canvas id="balanceChart"></canvas>
                 </div>
+
+                <!-- Account Breakdown Summary -->
+                <div class="account-summary">
+                    <h3>Account Balances at Retirement</h3>
+                    <div class="summary-cards">
+                        <div class="account-card">
+                            <h4>RRSP/RRIF</h4>
+                            <p class="account-value" id="rrspValue">-</p>
+                        </div>
+                        <div class="account-card">
+                            <h4>TFSA</h4>
+                            <p class="account-value" id="tfsaValue">-</p>
+                        </div>
+                        <div class="account-card">
+                            <h4>Non-Registered</h4>
+                            <p class="account-value" id="nonRegValue">-</p>
+                        </div>
+                        <div class="account-card">
+                            <h4>Total</h4>
+                            <p class="account-value" id="totalValue">-</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
