feat: Add tax calculation mode selector UI
- Add radio button selector for SIMPLIFIED vs ACCURATE modes
- Add CSS styling for tax mode selector with hover effects
- Add info box explaining the benefit of accurate mode
- UI ready, JavaScript wiring pending

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -215,6 +215,31 @@
                     </div>
 
                     <!-- Action Buttons -->
+                    <!-- Tax Calculation Mode -->
+                    <h3>💰 Tax Calculation Method</h3>
+                    <div class="form-group">
+                        <div class="tax-mode-selector">
+                            <label class="radio-option">
+                                <input type="radio" name="taxMode" value="SIMPLIFIED" checked>
+                                <span class="radio-label">
+                                    <strong>Simplified</strong>
+                                    <span class="info-text">25% flat tax rate (free)</span>
+                                </span>
+                            </label>
+                            <label class="radio-option">
+                                <input type="radio" name="taxMode" value="ACCURATE">
+                                <span class="radio-label">
+                                    <strong>Accurate ⭐</strong>
+                                    <span class="info-text">2024 federal + provincial rates</span>
+                                </span>
+                            </label>
+                        </div>
+                        <div class="info-box">
+                            <p>💡 <strong>Tip:</strong> Accurate mode uses actual tax brackets and can save you $2,000+ over retirement</p>
+                        </div>
+                    </div>
+
+
                     <div class="form-actions">
                         <button type="button" id="testCalculate" class="btn btn-secondary">
                             🧪 Test Calculate (Free)
