--- a/frontend/index.html
+++ b/frontend/index.html
@@ -97,16 +97,44 @@
                             <span class="info-text">Allocated 70% RRSP / 30% TFSA until retirement</span>
                         </div>
                         <div class="form-group">
-                            <label for="expectedReturn">Expected Return (%)</label>
-                            <input type="number" id="expectedReturn" min="0" max="25" step="0.1" value="7" required>
-                            <span class="info-text">Historical avg: 7-8%</span>
+                            <label>Asset Returns (Real, After Inflation)</label>
+                            <div style="margin-left: 20px;">
+                                <div class="form-group" style="margin-bottom: 12px;">
+                                    <label for="rrspRealReturn">RRSP/RRIF Real Return (%)</label>
+                                    <input type="number" id="rrspRealReturn" min="-10" max="15" step="0.1" value="2" required>
+                                    <span class="info-text">Conservative (bonds, GICs)</span>
+                                </div>
+                                <div class="form-group" style="margin-bottom: 12px;">
+                                    <label for="tfsaRealReturn">TFSA Real Return (%)</label>
+                                    <input type="number" id="tfsaRealReturn" min="-10" max="15" step="0.1" value="4" required>
+                                    <span class="info-text">Balanced (60/40 stocks/bonds)</span>
+                                </div>
+                                <div class="form-group" style="margin-bottom: 12px;">
+                                    <label for="nonRegRealReturn">Non-Registered Real Return (%)</label>
+                                    <input type="number" id="nonRegRealReturn" min="-10" max="15" step="0.1" value="5" required>
+                                    <span class="info-text">Aggressive (stocks, growth)</span>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <label for="expectedInflation">Inflation Rate (%)</label>
-                            <input type="number" id="expectedInflation" min="0" max="10" step="0.1" value="2.5" required>
-                            <span class="info-text">BoC target: 2%</span>
-                        </div>
-                        <div class="form-group">
+                            <label>Real Estate (Optional)</label>
+                            <div style="margin-left: 20px;">
+                                <div class="form-group" style="margin-bottom: 12px;">
+                                    <label for="realEstateValue">Current Value ($)</label>
+                                    <input type="number" id="realEstateValue" min="0" step="10000" value="0">
+                                    <span class="info-text">Leave 0 if not applicable</span>
+                                </div>
+                                <div class="form-group" style="margin-bottom: 12px;">
+                                    <label for="realEstateRealReturn">Real Appreciation (%)</label>
+                                    <input type="number" id="realEstateRealReturn" min="-10" max="15" step="0.1" value="1">
+                                    <span class="info-text">After inflation (can be negative)</span>
+                                </div>
+                                <div class="form-group" style="margin-bottom: 12px;">
+                                    <label for="realEstateSaleAge">Sale Age</label>
+                                    <input type="number" id="realEstateSaleAge" min="0" max="150" step="1" value="0">
+                                    <span class="info-text">Age when selling (0 = not selling)</span>
+                                </div>
+                            </div>
                             <label for="desiredSpending">Annual Spending ($)</label>
                             <input type="number" id="desiredSpending" min="0" step="1000" value="60000" required>
                             <span class="info-text">In today's dollars</span>
@@ -253,6 +281,10 @@
 
             <!-- Results Section -->
             <div id="resultsSection" class="results-section hidden">
+                <div style="background: #e0f2fe; border: 2px solid #0284c7; padding: 12px; margin-bottom: 20px; border-radius: 8px; text-align: center;">
+                    <strong style="color: #0369a1; font-size: 16px;">💡 All Values in Today's Purchasing Power</strong>
+                    <p style="margin: 4px 0 0; color: #075985; font-size: 14px;">Balances and spending shown in 2025 dollars (inflation already factored into returns)</p>
+                </div>
                 <h2>📈 Your Retirement Projection</h2>
                 
                 <div class="summary-cards">
