fix: UI improvements and warning management
- Increase life expectancy max from 120 to 150 (matches backend validation)
- Make pension checkbox inline with label text
- Clear warning boxes between calculation runs
- Deduplicate warnings: show only first 'Insufficient funds' occurrence
- Remove redundant tax-specific warnings (covered by general shortfall warning)
- Improve user experience with cleaner warning display

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -52,7 +52,7 @@
                         </div>
                         <div class="form-group">
                             <label for="lifeExpectancy">Life Expectancy</label>
-                            <input type="number" id="lifeExpectancy" min="65" max="120" value="90" required>
+                            <input type="number" id="lifeExpectancy" min="65" max="150" value="90" required>
                         </div>
                         <div class="form-group">
                             <label for="province">Province</label>
@@ -185,9 +185,9 @@
                     <h3>🏛️ Pension Income <span class="info-badge">Optional</span></h3>
                     
                     <div class="form-group">
-                        <label>
+                        <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
                             <input type="checkbox" id="includePension">
-                            Include pension income in calculations
+                            <span>Include pension income in calculations</span>
                         </label>
                     </div>
                     
