feat: Add Solana payment integration
- Add treasury wallet configuration (4m5yJZMSYK2N6htdkwQ8t4dsmuRSxuZ2rDba51cFc25m)
- Create /calculate-paid endpoint with transaction verification
- Add SolanaPaymentVerifier service for devnet verification
- Integrate Solana Web3.js in frontend
- Add calculateWithPayment() handler for 0.001 SOL payments
- Update requirements.txt with solders and base58 dependencies
- Protect .env.treasury in .gitignore

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
     <!-- Emoji favicon - no file needed! -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
+    <!-- Solana Web3.js -->
+    <script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -246,8 +248,8 @@
                         <button type="button" id="testCalculate" class="btn btn-secondary">
                             🧪 Test Calculate (Free)
                         </button>
-                        <button type="submit" class="btn btn-primary">
-                            💰 Calculate with Payment (0.01 SOL)
+                        <button type="button" id="calculateBtn" class="btn btn-primary">
+                            💰 Calculate with Payment (0.001 SOL)
                         </button>
                     </div>
                 </form>
