feat: Add batch mode benefits info box

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -58,6 +58,9 @@
                                     <span class="mode-description">Multiple scenarios, CSV export (paid)</span>
                                 </span>
                             </label>
+                        <div class="batch-mode-info" style="margin-top: 15px; padding: 15px; background: #e8f5e9; border-radius: 8px; display: none;">
+                            <strong style="color: #2e7d32;">📊 Includes FREE analysis templates!</strong>
+                        </div>
                         </div>
                     </div>
 
