refactor: Move template info into batch mode label for visibility

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,12 +55,9 @@
                                 <input type="radio" name="calcMode" value="batch" id="batchModeRadio">
                                 <span class="mode-label">
                                     <strong>💰 Batch Analysis</strong>
-                                    <span class="mode-description">Multiple scenarios, CSV export (paid)</span>
+                                    <span class="mode-description">Multiple scenarios + FREE Excel/Sheets templates (paid)</span>
                                 </span>
                             </label>
-                        <div class="batch-mode-info" style="margin-top: 15px; padding: 15px; background: #e8f5e9; border-radius: 8px; display: none;">
-                            <strong style="color: #2e7d32;">📊 Includes FREE analysis templates!</strong>
-                        </div>
                         </div>
                     </div>
 
