fix: Improve batch wording and add template download buttons

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -54,8 +54,8 @@
                             <label class="mode-option" id="batchModeLabel">
                                 <input type="radio" name="calcMode" value="batch" id="batchModeRadio">
                                 <span class="mode-label">
-                                    <strong>💰 Batch Analysis</strong>
-                                    <span class="mode-description">Multiple scenarios + FREE Excel/Sheets templates (paid)</span>
+                                    <strong>💰 Batch Analysis (paid)</strong>
+                                    <span class="mode-description">Multiple scenarios + FREE Excel/Sheets templates</span>
                                 </span>
                             </label>
                         </div>
