feat: Set pension checkbox unchecked by default for non-pension users

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -201,7 +201,7 @@
                     
                     <div class="form-group">
                         <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
-                            <input type="checkbox" id="includePension" checked>
+                            <input type="checkbox" id="includePension">
                             <span>Include pension income in calculations</span>
                         </label>
                     </div>
