fix: Correct div nesting for income column layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -262,6 +262,7 @@ Adjustments:
                         <div style="background: #f0f8ff; padding: 20px; border-radius: 8px; border-left: 4px solid #2196f3;">
                             <h4 style="margin-top: 0; color: #2196f3;">💰 Additional Income Streams</h4>
 
+                    <div class="form-group">
                         <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
                             <input type="checkbox" id="includeAdditionalIncome">
                             <span>Include additional income streams 
