feat: Show Add Income button on load, add remove buttons, fix label wrapping

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -265,8 +265,7 @@ Adjustments:
                     <div class="form-group">
                         <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
                             <input type="checkbox" id="includeAdditionalIncome">
-                            <span>Include additional income streams 
-                                <span class="info-icon" title="💡 Additional Income Streams:
+                            <span style="white-space: nowrap;">Include additional income streams <span class="info-icon" title="💡 Additional Income Streams:
 
 Examples:
 • Rental property income
@@ -286,7 +285,7 @@ Each stream can have:
                         </label>
                     </div>
                     
-                    <div id="additionalIncomeFields" class="hidden">
+                    <div id="additionalIncomeFields" style="margin-top: 10px;">
                         <div id="additionalIncomeContainer"></div>
                         <button type="button" id="addAdditionalIncomeBtn" class="btn btn-secondary" style="margin-top: 10px;">
                             ➕ Add Income Stream
