--- a/frontend/index.html
+++ b/frontend/index.html
@@ -244,7 +244,7 @@ Adjustments:
                     <div class="form-group">
                         <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
                             <input type="checkbox" id="includePension">
-                            <span>Include pension income in calculations</span>
+                            <span style="white-space: nowrap;">Include pension income in calculations</span>
                         </label>
                     </div>
                     
