--- a/frontend/index.html
+++ b/frontend/index.html
@@ -235,7 +235,7 @@ Adjustments:
                     </h3>
                     
                     <!-- Two-column layout -->
-                    <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 25px; margin-bottom: 20px;">
+                    <div class="pension-income-grid">
                         
                         <!-- Left: Pension -->
                         <div style="background: #f8f9fa; padding: 20px; border-radius: 8px; border-left: 4px solid #8e44ad;">
