feat: Add Enhanced Insights paid tier with detailed tooltips
Frontend changes:
- Add Enhanced Insights button (0.0005 SOL) between free and batch
- Rename 'Calculate with Payment' to 'Batch Analysis' for clarity
- Add enhancedInsightsCalculate handler with payment flow
- Enhance chart tooltip with flag-style income/outflow breakdown
- Support two modes:
  * Free: Simple balance tooltip
  * Enhanced: Detailed per-stream income, spending, taxes, surplus/deficit

Tooltip shows:
- Income breakdown: RRIF, CPP, OAS, Pensions, Additional Income
- Per-stream details with labels and amounts
- Outflows: Spending and taxes
- Net surplus or deficit
- Account balance

Creates clear value ladder:
1. Test Calculate (Free) - basic chart
2. Enhanced Insights (0.0005 SOL) - rich tooltips
3. Batch Analysis (0.001 SOL) - CSV export

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -329,8 +329,14 @@ Each stream can have:
                         <button type="button" id="testCalculate" class="btn btn-secondary">
                             🧪 Test Calculate (Free)
                         </button>
+                        <button type="button" id="enhancedInsightsBtn" class="btn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; margin-top: 10px;">
+                            🔍 Enhanced Insights (0.0005 SOL)
+                            <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
+                                Detailed income breakdown & tooltips
+                            </div>
+                        </button>
                         <button type="button" id="calculateBtn" class="btn btn-primary">
-                            💰 Calculate with Payment (0.001 SOL)
+                            💰 Batch Analysis (0.001 SOL)
                         </button>
                     </div>
                 </form>
