fix: Standardize button styling and fix showSuccess error
Button improvements:
- Consistent width (100%) and padding across all three buttons
- Clear feature descriptions with pricing
- Professional visual hierarchy (secondary → gradient → success)
- Better spacing between buttons

Bug fix:
- Change showSuccess() to showStatus() in Enhanced Insights
- Fixes 'showSuccess is not defined' error

UI now shows:
1. Test Calculate (Free) - gray/secondary
2. Enhanced Insights (0.0005 SOL) - purple gradient
3. Batch Analysis (0.001 SOL) - green/success

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -326,17 +326,20 @@ Each stream can have:
 
 
                     <div class="form-actions">
-                        <button type="button" id="testCalculate" class="btn btn-secondary">
+                        <button type="button" id="testCalculate" class="btn btn-secondary" style="width: 100%; padding: 12px; margin-bottom: 10px;">
                             🧪 Test Calculate (Free)
                         </button>
-                        <button type="button" id="enhancedInsightsBtn" class="btn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; margin-top: 10px;">
-                            🔍 Enhanced Insights (0.0005 SOL)
+                        <button type="button" id="enhancedInsightsBtn" class="btn btn-primary" style="width: 100%; padding: 12px; margin-bottom: 10px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none;">
+                            🔍 Enhanced Insights
                             <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
-                                Detailed income breakdown & tooltips
+                                0.0005 SOL · Detailed income tooltips
                             </div>
                         </button>
-                        <button type="button" id="calculateBtn" class="btn btn-primary">
-                            💰 Batch Analysis (0.001 SOL)
+                        <button type="button" id="calculateBtn" class="btn btn-success" style="width: 100%; padding: 12px;">
+                            💰 Batch Analysis
+                            <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
+                                0.001 SOL · CSV export & variations
+                            </div>
                         </button>
                     </div>
                 </form>
