fix: Simplify button styling and add tooltip debugging
Button fixes:
- Remove conflicting inline padding styles
- Let CSS classes handle base styling (.btn, .btn-secondary, .btn-primary)
- Only override what's necessary (width, green color for batch)
- Consistent appearance across all three buttons

Tooltip debugging:
- Add console logging in afterBody function
- Shows enhancedMode status, projection data, breakdown availability
- Helps diagnose why enhanced tooltip isn't appearing

Changes:
- Test Calculate: Uses btn + btn-secondary (gray, from CSS)
- Enhanced Insights: Uses btn + btn-primary (purple gradient, from CSS)
- Batch Analysis: Uses btn + custom green override

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -326,16 +326,16 @@ Each stream can have:
 
 
                     <div class="form-actions">
-                        <button type="button" id="testCalculate" class="btn btn-secondary" style="width: 100%; padding: 12px; margin-bottom: 10px;">
+                        <button type="button" id="testCalculate" class="btn btn-secondary" style="width: 100%; margin-bottom: 10px;">
                             🧪 Test Calculate (Free)
                         </button>
-                        <button type="button" id="enhancedInsightsBtn" class="btn btn-primary" style="width: 100%; padding: 12px; margin-bottom: 10px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none;">
+                        <button type="button" id="enhancedInsightsBtn" class="btn btn-primary" style="width: 100%; margin-bottom: 10px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none;">
                             🔍 Enhanced Insights
                             <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
                                 0.0005 SOL · Detailed income tooltips
                             </div>
                         </button>
-                        <button type="button" id="calculateBtn" class="btn btn-success" style="width: 100%; padding: 12px;">
+                        <button type="button" id="calculateBtn" class="btn" style="width: 100%; background: #28a745; color: white;">
                             💰 Batch Analysis
                             <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
                                 0.001 SOL · CSV export & variations
