fix: Centralize button styling in CSS for consistency
Issues fixed:
- Inconsistent button heights, widths, and alignment
- Different border radius on buttons
- Mixed inline styles and CSS classes causing conflicts

Solution:
- Created dedicated CSS classes: .btn-action, .btn-free, .btn-enhanced, .btn-batch
- Removed all inline styles from HTML
- Consistent 15px padding, 8px border radius, 10px spacing
- Proper hover effects with transform and shadow
- Disabled state handled with :disabled selector

Result: All three buttons now have identical dimensions,
spacing, and professional appearance

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -326,20 +326,16 @@ Each stream can have:
 
 
                     <div class="form-actions">
-                        <button type="button" id="testCalculate" class="btn btn-secondary" style="width: 100%; margin-bottom: 10px;">
+                        <button type="button" id="testCalculate" class="btn-action btn-free">
                             🧪 Test Calculate (Free)
                         </button>
-                        <button type="button" id="enhancedInsightsBtn" class="btn btn-primary" style="width: 100%; margin-bottom: 10px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border: none;">
+                        <button type="button" id="enhancedInsightsBtn" class="btn-action btn-enhanced">
                             🔍 Enhanced Insights
-                            <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
-                                0.0005 SOL · Detailed income tooltips
-                            </div>
+                            <span class="btn-subtitle">0.0005 SOL · Detailed income tooltips</span>
                         </button>
-                        <button type="button" id="calculateBtn" class="btn" style="width: 100%; background: #28a745; color: white;">
+                        <button type="button" id="calculateBtn" class="btn-action btn-batch">
                             💰 Batch Analysis
-                            <div style="font-size: 0.85em; opacity: 0.9; margin-top: 4px;">
-                                0.001 SOL · CSV export & variations
-                            </div>
+                            <span class="btn-subtitle">0.001 SOL · CSV export & variations</span>
                         </button>
                     </div>
                 </form>
