Fix: Remove inline styles from checkbox labels
Removed problematic inline styles (display: inline-flex, white-space: nowrap)
from HTML and replaced with clean CSS class .checkbox-label.

This allows proper text wrapping on mobile without CSS !important fights.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -240,9 +240,9 @@ Adjustments:
                             <h4 style="margin-top: 0; color: #8e44ad;">📊 Pension Income (Optional)</h4>
                     
                     <div class="form-group">
-                        <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
+                        <label for="includePension" class="checkbox-label">
                             <input type="checkbox" id="includePension">
-                            <span style="white-space: nowrap;">Include pension income in calculations</span>
+                            <span>Include pension income in calculations</span>
                         </label>
                     </div>
                     
@@ -261,9 +261,9 @@ Adjustments:
                             <h4 style="margin-top: 0; color: #2196f3;">💰 Additional Income Streams</h4>
 
                     <div class="form-group">
-                        <label style="display: inline-flex; align-items: center; gap: 8px; cursor: pointer;">
+                        <label for="includeAdditionalIncome" class="checkbox-label">
                             <input type="checkbox" id="includeAdditionalIncome">
-                            <span style="white-space: nowrap;">Include additional income streams <span class="info-icon" title="💡 Additional Income Streams:
+                            <span>Include additional income streams <span class="info-icon" title="💡 Additional Income Streams:
 
 Examples:
 • Rental property income
